setting up sequelize for db connection

--- a/env.example
+++ b/env.example
@@ -1,13 +1,19 @@
+# Application
 NODE_ENV=development
 APP_PORT=3000
 DEV_MODE=true
 
-# JWT Configuration
+# JWT Authentication
 JWT_SECRET_KEY=your-secret-key-change-this-in-production
 
-# Database (if needed)
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=your_database
-# DB_USER=your_user
-# DB_PASSWORD=your_password
+# Database - Development (individual variables)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=boilerplate_db
+DB_USER=postgres
+DB_PASSWORD=password
+DB_DIALECT=postgres
+
+# Database - Production (connection string)
+# Use DATABASE_URL in production instead of individual variables
+# DATABASE_URL=postgresql://user:password@host:port/database
