--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
       "@component/*": ["./src/components/*"],
       "@config/*": ["./src/config/*"],
       "@constant/*": ["./src/constants/*"],
+      "@database/*": ["./src/database/*"],
+      "@model": ["./src/database/models"],
+      "@model/*": ["./src/database/models/*"],
       "@interface/*": ["./src/interfaces/*"],
       "@lib/*": ["./src/lib/*"],
       "@middleware/*": ["./src/middlewares/*"],
